# GemmaInference

./: .dockerignore  .gitignore  README.md  README2.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: attachments.py  config.py  llm_client.py  main.py  schemas.py  user_tracker.py
docker/: backend.Dockerfile  vllm-gemma4.Dockerfile
docs/: ARCHITECTURE_AND_INFERENCE_OPTIMIZATION.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ApiKeyGate.css  ApiKeyGate.jsx  Avatar.css  Avatar.jsx  ChatInput.css  ChatInput.jsx  ChatMessage.css  ChatMessage.jsx  Header.css  Header.jsx  Sidebar.css  Sidebar.jsx  Welcome.css  Welcome.jsx
frontend/src/components/icons/: SidebarToggleIcons.jsx
frontend/src/hooks/: placeholderPhrases.js  useSpeechToText.js  useTypewriter.js
frontend/src/utils/: consumeGenerateStream.js  messageText.js
scripts/: agent_loop.py  install_vllm_wsl.sh
